# statshed-server

./: .dockerignore  .env.example  .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.release.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  background.py  config.py  entrypoint.sh  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 192b2938d2b9_add_log_columns_to_jobs.py  bbc0d80cc9f1_add_acked_columns_to_jobs.py  c7e8f9a1b2d3_add_expiration_and_staleness_enabled.py  d6facbd4fc3c_initial_schema_baseline.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_background.py  test_error_handling.py  test_integration.py  test_migrations.py  test_performance.py  test_routing.py  test_security_headers.py  test_socket_events.py  test_static_serving.py  test_test_hooks.py
cmd/statshed-server/: main.go  main_test.go
contract/: conftest.py  coverage-map.md  pyproject.toml  pytest.ini  runner.py  test_ack.py  test_admin.py  test_background.py  test_concurrency.py  test_config.py  test_delete.py  test_errors.py  test_groups.py  test_health.py  test_jobs.py  test_logs.py  test_routing.py  test_security.py  test_smoke.py  test_spa.py  test_status.py
contracttest/: ack_test.go  admin_test.go  background_test.go  concurrency_test.go  config_test.go  coverage-map.md  delete_test.go  errors_test.go  groups_test.go  harness_test.go  health_test.go  jobs_test.go  logs_test.go  routing_test.go  security_test.go  smoke_test.go  spa_test.go  status_test.go
docs/: design-backend.md  design-cli.md  design-frontend.md  design.md  frontend-api.md  restapi.md
docs/frontend/: acking.md  expiring.md  healthcards.md  logs.md  robustness-plan.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: dashboard.spec.ts  group-detail.spec.ts  log-viewer.spec.ts  settings.spec.ts
frontend/e2e-live/: live-sse.spec.ts
frontend/src/: App.tsx  index.css
internal/api/: ack.go  admin.go  admin_test.go  api_test.go  concurrency_test.go  config.go  config_test.go  cors.go  error_test.go  errors.go  errors_test.go  group_config.go  groups.go  health.go  jobs.go  json.go  json_test.go  logging.go  logs.go  middleware.go  middleware_test.go  router.go  server.go  server_test.go  sse_events_test.go  sse_test.go  status.go  status_test.go
internal/background/: publish.go  worker.go
internal/config/: config.go  config_test.go  config_validation_test.go
internal/realtime/: hub.go  hub_test.go  publish.go  sse.go
internal/staticfs/: spa.go
internal/store/: ack.go  ack_test.go  admin.go  admin_test.go  checks.go  checks_test.go  config.go  config_test.go  empty_log_test.go  group.go  groups.go  job.go  job_write.go  job_write_test.go  jobs.go  (+7 more)
(+106 files in other folders)
