[project]
name = "statshed-backend"
version = "0.1.0"
description = "Flask-based backend for the StatShed status dashboard"
license = "CC0-1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "flask>=3.1.2",
    "flask-compress>=1.24",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.0",
    "gevent>=24.11.1",
    "gevent-websocket>=0.10.1",
    "gunicorn>=23.0.0",
    "ruff>=0.14.13",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
# E501 (line length) is enforced for code by `ruff format`; the only remaining hits
# are long comments / docstrings / string literals the formatter intentionally leaves
# alone (including single-line AIDEV-NOTE anchors, which must stay greppable). Don't
# fail lint on those.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Alembic's env.py imports the app's models after configuring the migration
# environment; that ordering is intentional, so allow the late (E402) import.
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
# AIDEV-NOTE: Legacy code is not fully annotated, so we run mypy at its default
# strictness (it type-checks annotated definitions) rather than --strict, to keep
# the signal-to-noise ratio high while still catching real type errors in new and
# annotated code. flask_socketio / flask_cors / flask_compress ship no type stubs (see override).
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["flask_socketio.*", "flask_cors.*", "flask_compress.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
