[project]
name = "statshed-contract"
version = "0.1.0"
description = "Shared HTTP contract test suite for the StatShed server (Python and Go)"
license = "CC0-1.0"
requires-python = ">=3.13"
# AIDEV-NOTE: This is the test-as-contract harness (spec.md 8). It drives a live
# StatShed server over real HTTP via httpx, so the same assertions can run against the
# Python server (the oracle) and then verbatim against the Go server. pytest is a
# runtime dependency here because running the suite IS this project's purpose.
dependencies = [
    "httpx>=0.28",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
# E501 is handled by `ruff format`; the only remaining hits are long comments / string
# literals the formatter leaves alone (including greppable AIDEV-NOTE anchors).
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_redundant_casts = true
warn_unused_ignores = true
